--- a/ui/public/assets/style.css
+++ b/ui/public/assets/style.css
@@ -73,3 +73,61 @@ main {
     max-height: 100%;
     width: 70%;
 }
+
+
+ #image_preview, #image_preview_2 {
+    max-width: 200px;
+}
+   
+.input-field input[type=text]:focus + label {
+ color: #1565C0;
+}
+.input-field input[type=email]:focus + label {
+ color: #1565C0;
+}
+.input-field input[type=number]:focus + label {
+ color: #1565C0;
+}
+
+
+.input-field input[type=text]:focus {
+ border-bottom: 1px solid #1565C0;
+ box-shadow: 0 1px 0 0 #1565C0;
+}
+.input-field input[type=email]:focus {
+ border-bottom: 1px solid #1565C0;
+ box-shadow: 0 1px 0 0 #1565C0;
+}
+.input-field input[type=number]:focus {
+ border-bottom: 1px solid #1565C0;
+ box-shadow: 0 1px 0 0 #1565C0;
+}
+.picker__date-display{
+background-color:  #1565c0;
+}
+.picker__weekday-display{
+    background-color: #0d47a1;
+}
+.picker__day--selected, .picker__day--selected:hover, .picker--focused .picker__day--selected{
+    background-color: #0d47a1;
+}
+.picker__close, .picker__today{
+    color: #0d47a1;   
+}
+.picker__close:active, .picker__today:active{
+    color: #bbdefb;   
+}
+input[type="checkbox"].filled-in:checked+label:after {
+        top: 0;
+        width: 20px;
+        height: 20px;
+        border: 2px solid #0d47a1;
+        background-color: #0d47a1;
+        z-index: 0;
+}
+.dropdown-content li>a, .dropdown-content li>span{
+    color: #0d47a1;
+}
+.form-container{
+    padding: 30px;margin-top:10px;height: 100%;overflow-x: hidden;
+}
